Make vignette a pdf compiler

--- a/vignettes/PackToTheFuture.Rmd
+++ b/vignettes/PackToTheFuture.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "PackToTheFuture"
-output: rmarkdown::html_vignette
+output: rmarkdown::pdf_document
 vignette: >
   %\VignetteIndexEntry{PackToTheFuture}
   %\VignetteEngine{knitr::rmarkdown}
