--- a/vignettes/PackToTheFuture.Rmd
+++ b/vignettes/PackToTheFuture.Rmd
@@ -34,6 +34,16 @@ Elvin types here.
 
 Joshua types here.
 
+```{r}
+get_codons <- function(seq, start = 1){
+  seq_len <- nchar(seq)
+  codons <- substring(seq,
+                      first = seq(from = start, to = seq_len-3+1, by = 3),
+                      last = seq(from = 3+start-1, to = seq_len, by = 3))
+  return(codons)
+}
+```
+
 ### Function 4
 
 Marcel types here.
@@ -41,3 +51,7 @@ Marcel types here.
 ### Function 5
 
 Mikel types here.
+
+### Possible use cases
+
+Who types here?
